--- a/src/Components/Agenda/ExamsGrid.css
+++ b/src/Components/Agenda/ExamsGrid.css
@@ -1,5 +1,19 @@
-.MuiGridListTile-root:nth-child(2n+1) {
-    background-color: #F1F3FFFF;
+.grid-container {
+    margin: 0 100px;
+}
+.MuiGridList-root li{
+   margin: 50px 0;
+}
+.MuiGridListTile-root:nth-child(4n),
+.MuiGridListTile-root:nth-child(4n+1) {
+    background-color: #fafafa;
+}
+
+li .MuiGridListTileBar-root {
+    background: rgba(0, 0, 0, 0.1);
+}
+.MuiGridListTileBar-title, .MuiGridListTileBar-subtitle {
+    color: rgb(71, 71, 71);
 }
 .exams-grid-materie {
     margin: 10px;
@@ -11,9 +25,10 @@
     text-align: center;
 }
 .exams-grid-dataExamen {
-    margin: 10px;
     text-align: center;
     font-size: 28px;
     font-weight: bold;
-    color: darkred;
+    color: white;
+    background-color: #3f51b5;
+    padding: 40px;
 }
