--- a/src/Components/Agenda/Filters.css
+++ b/src/Components/Agenda/Filters.css
@@ -4,3 +4,11 @@
 .MuiSelect-select.MuiSelect-select {
     width: 200px;
 }
+.show-filters {
+    display: flex;
+    justify-content: center;
+}
+.show-filters * {
+    margin: 10px;
+    padding: 2px;
+}
