--- a/src/Components/Item/Item.css
+++ b/src/Components/Item/Item.css
@@ -2,9 +2,12 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-top: 50px;
 }
 
 .exams-form .MuiFormControl-root {
-    margin: 0.5rem;
-    width: 30rem;
+    width: 400px;
+}
+.exams-form .MuiInput-root {
+    margin: 15px 0;
 }
