--- a/src/Components/Agenda/ExamsGrid.css
+++ b/src/Components/Agenda/ExamsGrid.css
@@ -1,14 +1,14 @@
 .grid-container {
-    margin: 0 100px;
+    margin: 0 90px;
 }
 .MuiGridList-root li{
-   margin: 50px 0;
+   margin: 50px 1%;
+   width: 31% !important;
 }
-.MuiGridListTile-root:nth-child(4n),
-.MuiGridListTile-root:nth-child(4n+1) {
+.MuiGridListTile-root:nth-child(2n),
+.MuiGridListTile-root:nth-child(2n+2) {
     background-color: #fafafa;
 }
-
 li .MuiGridListTileBar-root {
     background: rgba(0, 0, 0, 0.1);
 }
@@ -18,7 +18,6 @@ li .MuiGridListTileBar-root {
 .exams-grid-materie {
     margin: 10px;
     font-size: 26px;
-    font-weight: bold;
     text-align: center;
 }
 .exams-grid-text {
@@ -31,4 +30,24 @@ li .MuiGridListTileBar-root {
     color: white;
     background-color: #3f51b5;
     padding: 40px;
+}
+
+@media screen and (max-width: 1200px) {
+    .MuiGridList-root li{
+        margin: 30px 2%;
+        width: 46% !important;
+     }
+     .grid-container {
+        margin: 0 1vw;
+    }
+}
+
+@media screen and (max-width: 700px) {
+    .MuiGridList-root li{
+        margin: 20px 0;
+        width: 100% !important;
+     }
+     .grid-container {
+        margin: 0 10vw;
+    }
 }
