--- a/src/Components/Login/Login.css
+++ b/src/Components/Login/Login.css
@@ -6,13 +6,14 @@
     text-align: center;
     min-height: 100vh;
     background-color: #fafafa;  
+ 
 }
 
 .login-container {
    padding: 80px;
    border-radius: 5px;
    background-color:  white;
-   box-shadow: 0px 0px 10px 5px lightgrey;
+   box-shadow: 0px 0px 10px -3px #3f51b5;
 }
 
 .login-title {
@@ -27,6 +28,11 @@
 
 .login-form * {
     margin: 10px 0;
+}
+
+.login-error {
+    color: rgb(151, 12, 12);
+    font-weight: bold;
 }
 
 .no-account {
