--- a/src/Components/Item/Item.css
+++ b/src/Components/Item/Item.css
@@ -8,6 +8,6 @@
 .exams-form .MuiFormControl-root {
     width: 400px;
 }
-.exams-form .MuiInput-root {
-    margin: 15px 0;
+.MuiInput-root {
+    margin: 10px 0;
 }
