--- a/src/Components/Login/Login.css
+++ b/src/Components/Login/Login.css
@@ -10,10 +10,15 @@
 }
 
 .login-container {
+   width: 50vw;
    padding: 80px;
    border-radius: 5px;
    background-color:  white;
    box-shadow: 0px 0px 10px -3px #3f51b5;
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+   z-index: 4;
 }
 
 .login-title {
@@ -23,12 +28,11 @@
 .login-form {
     display: flex;
     flex-direction: column;
+    justify-content: center;
     margin: 20px;
+    width: 50%;
 }
 
-.login-form * {
-    margin: 10px 0;
-}
 
 .login-error {
     color: rgb(151, 12, 12);
@@ -43,4 +47,19 @@
 .no-account span{
     font-size: 12px;
     margin-right: 5px;
+}
+@media screen and (max-width: 1000px) {
+    .login-container {
+        width: 75vw;
+        padding: 60px;
+     }
+}
+@media screen and (max-width: 700px) {
+    .login-container {
+        width: 100vw;
+        padding: 40px;
+        box-shadow: unset;
+        border-radius: 0;
+    
+     }
 }
